# applypilot-agent

./: .env.example  .gitallowed  .gitignore  README.md  UPSTREAM.md  profile.example.json  pyproject.toml
config/: live.env.example
docs/: ADR-001-fork.md  ADR-002-agent-provider.md  ADR-003-portfolio-matching.md  GLOSSARY.md
scripts/: enable_live_apply.sh  install_skills.sh  job_apply_confirm.sh  job_apply_morning.sh  job_apply_on_confirm.sh  job_apply_stage6.sh  job_apply_stages_1_5.sh  setup_hermes_cron.sh  validate_pipeline.sh
skills/pp-job-apply/: SKILL.md
skills/pp-job-apply/references/: cursor-setup.md  hermes-setup.md
src/applypilot/: __init__.py  cli.py  config.py  database.py  llm.py  pipeline.py
src/applypilot/apply/: launcher.py  prompt.py
src/applypilot/apply/providers/: __init__.py  base.py  claude.py  cursor_cli.py  cursor_sdk.py
src/applypilot/config/: sites.yaml
src/applypilot/discovery/: jobspy.py
src/applypilot/scoring/: cover_letter.py  portfolio.py  tailor.py  validator.py
